Menú sigue en proceso

--- a/system_huellitas/resources/css/admin/static_components/menu.css
+++ b/system_huellitas/resources/css/admin/static_components/menu.css
@@ -10,3 +10,11 @@ hr{
 .btn {
     background-image: none;
  }
+
+
+ .disabled-link {
+    color: gray; /* Cambiar el color del texto a gris */
+    pointer-events: none; /* Evitar que el enlace sea clickeable */
+    text-decoration: none; /* Quitar subrayado */
+    cursor: not-allowed; /* Cambiar el cursor */
+}
