--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -43,11 +43,9 @@
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
-                    <form class="d-flex" role="search" id="search_cupones_perros">
-                        <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
-                            id="search" placeholder="Buscar...">
-                    </form>
-                </div>
+                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
+                         <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search" id="searchInput" name="search" placeholder="Buscar...">
+                    </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <!-- Este texto solo se mostrara en pantallas pequeñas, el .d-none esconde elementos -->
                     <div class="d-md-none d-lg-none">
@@ -56,7 +54,7 @@
                     <!-- .float-left y end posiciona el boton a la izquieda o derecha de la pantalla dependiendo del tamaño -->
                     <button
                         class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
-                        data-bs-toggle="modal" data-bs-target="#agCupon" type="button">
+                        data-bs-toggle="modal" onclick="openCreate()" type="button">
                         <img class="me-2" src="../../resources/img/png/boton_agregar.png" width="20px">
                         Agregar cupon
                     </button>
@@ -66,162 +64,48 @@
 
         <!-- Empieza la programación de las tablas
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
-        <div class="container p-4 mt-4 table-responsive">
-            <table class="table">
-                <thead>
-                    <tr class="table">
+      <div class="container mt-5">
+        <div class="table-responsive">
+            <table class="table align-middle text-center">
+                <!-- Encabezado de las tablas -->
+                <thead class="table table-responsive">
+                    <tr>
+                        <td colspan="7" id="rowsFound" hidden></td>
+                    </tr>
+                    <tr class="table-warning">
                         <!-- Las columnas habitualmente son estáticas, en este caso siempre serán estáticas -->
-                        <th scope="col">Nombre del código</th>
-                        <th scope="col">Fecha registro</th>
-                        <th scope="col">Porcentaje %</th>
-                        <th scope="col">Estado</th>
-                        <th scope="col">Acciones</th>
+                        <th>Nombre del código</th>
+                        <th>Fecha registro</th>
+                        <th>Porcentaje %</th>
+                        <th>Estado</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <!-- Esto si ya es contenido que cuando vaya conectado a db, será interactivo -->
-                        <td>ING_WILL</td>
-                        <td>2024-02-14</td>
-                        <td>40%</td>
-                        <td>
-                            <div class="form-switch">
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="flexSwitchCheckChecked" checked disabled>
-                                <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
-                  No lo habilitamos-->
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-light img-fluid"><img
-                                    src="../../resources/img/svg/delete_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
-                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
-                    se pone arriba del </html pero fuera del body-->
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>SUSAN_pro</td>
-                        <td>2024-01-20</td>
-                        <td>60%</td>
-                        <td>
-                            <div class="form-switch">
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="flexSwitchCheckChecked" checked disabled>
-                                <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
-                  No lo habilitamos-->
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-light img-fluid"><img
-                                    src="../../resources/img/svg/delete_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                            <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
-                  No lo habilitamos-->
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>MICH</td>
-                        <td>2023-12-15</td>
-                        <td>35%</td>
-                        <td>
-                            <div class="form-switch">
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="flexSwitchCheckChecked" disabled>
-                                <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
-                  No lo habilitamos-->
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-light img-fluid"><img
-                                    src="../../resources/img/svg/delete_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
-                            <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
-                  No lo habilitamos-->
-                        </td>
-                    </tr>
-                </tbody>
+                <!-- Cuerpo de la tabla -->
+                <tbody id="tableBody"></tbody>
             </table>
+            <div id="anyTable"></div>
         </div>
+    </div>
+
+
 
         <!--Modal para el boton de agregar cupon-->
-        <div class="modal" id="agCupon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal" id="saveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-                <form id="AgregarCuponFormulario" name="AgregarCuponFormularioN">
-                    <div class="modal-content">
-                        <div class="modal-header bg-orange-color">
-                            <!-- Esto define el titiulo del modal que aparece en la franja naranja -->
-                            <div class="container text-center">
-                                <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar cupón</h1>
-                            </div>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <!-- Aqui comienzan los inputs y el boton del formulario del modal -->
-                        <div class="modal-body">
-                            <div class="row">
-                                <div class="col-sm-12 col-md-6">
-                                    <p class="fs-8 btn-orange-color fw-bold">Código</p>
-                                    <input type="text" class="form-control" placeholder="#####" aria-label="codigo"
-                                        id="Codigo_AgregarCuponFormulario" name="Codigo_AgregarCuponFormularioN">
-                                </div>
-                                <!-- EL div que esta debajo donde se dice col-sm-12 y col-sm-6 es para que los input usen
-            todo el espacio disponible y sino se ordenen 2 inputs a la par-->
-                                <div class="col-sm-12 col-md-6">
-                                    <p class="fs-8 btn-orange-color fw-bold">Porcentaje</p>
-                                    <input type="number" min="1" max="100" class="form-control" placeholder="100%"
-                                        aria-label="porcentaje" id="Porcentaje_AgregarCuponFormulario"
-                                        name="Porcentaje_AgregarCuponFormularioN">
-                                </div>
-                            </div>
-                            <br>
-                            <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
-                            <div class="form-check form-switch" id="check_AgregarCuponFormulario"
-                                name="check_AgregarCuponFormularioN">
-                                <label class="form-check-label fw-bold" for="flexSwitchCheckChecked">Cupón
-                                    habilitado</label>
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="flexSwitchCheckChecked" checked>
-                            </div>
-                        </div>
-                        <!-- Este Boton es para enviar los datos del formulario -->
+                <div class="modal-content">
+                    <!-- El div que esta debajo del comentario indica el color de fondo del titulo del modal y el titulo -->
+                    <div class="modal-header bg-orange-color">
                         <div class="container text-center">
-                            <button type="button" class="btn btn-orange-color text-white"
-                                id="BotonAgregar_AgregarCuponFormulario">Agregar</button>
+                            <h1 class="modal-title fs-5 text-white" id="modalTitle">Agregar cupón</h1>
                         </div>
-                        <br>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
                     </div>
-                </form>
-            </div>
-        </div>
-
-
-
-
-        <!--Modal para el boton de actualizar cupon-->
-        <div class="modal " id="actCupon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <form id="ActualizarCuponFormulario" name="ActualizarCuponFormularioN">
-                    <div class="modal-content">
-                        <!-- El div que esta debajo del comentario indica el color de fondo del titulo del modal y el titulo -->
-                        <div class="modal-header bg-orange-color">
-                            <div class="container text-center">
-                                <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Actualizar cupón</h1>
-                            </div>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <!-- Aqui comienzan las preguntas e inputs del formulario y el boton para enviar esta información -->
+                    <!-- Aqui comienzan las preguntas e inputs del formulario y el boton para enviar esta información -->
+                    <form id="crear_cupon" name="crear_cupon">
                         <div class="modal-body">
+                            <input type="hidden" id="idCupon" name="idCupon">
                             <div class="row">
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Código</p>
@@ -247,21 +131,26 @@
                         <!-- Este botón servirá para enviar la información del formulario -->
                         <div class="container text-center">
                             <button type="button" class="btn btn-orange-color text-white"
-                                id="BotonAc_ActualizarCupon">Actualizar</button>
+                                id="BotonAc_ActualizarCupon">Agregar</button>
                         </div>
                         <br>
-                    </div>
+                </div>
                 </form>
             </div>
         </div>
-
     </main>
 
+    <!-- Framework Bootstrap - JS -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Agregamos el framework de Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Agregamos el controlador general de la aplicacion-->
+        <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <!-- Agregamos el script del menu-->
     <script src="../../controllers/utils/admin.js"></script>
+    <!-- Script funcionamiento -->
+    <script type="text/javascript" src="../../controllers/admin/cupones.js"></script>
 </body>
-
-
 
 </html>
