--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -22,7 +22,10 @@
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <!-- Formulario -->
-                <form id="loginForm">
+                <form id="loginForm" class="d-none">
+                    <div>
+                        <h4 class="fw-semibold text-center">Inicio de sesión</h4>
+                    </div>
                     <!-- Row que contiene el icono y el input -->
                     <div class="row align-items-center">
                         <div class="col-auto ">
@@ -55,6 +58,60 @@
                             class="btn btn-orange-color text-light p-2 rounded-3">Ingresar</button>
                         <a class="fw-normal text-decoration-none text-dark fs-6 text-center"
                             href="../admin/recuperacion_contra_1.html">¿Has olvidado tú contraseña?</a>
+                    </div>
+                </form>
+
+                <form id="signUpForm" class="d-none">
+                    <div>
+                        <h4 class="fw-semibold text-center">Registrar primer usuario</h4>
+                    </div>
+                    <div class="text-center">
+                        <div class="col-sm-12 col-md-auto">
+                            <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
+                                width="120px" height="120px">
+                        </div>
+                        <div class="col mt-4">
+                            <!-- Botón para cargar imagen -->
+                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden required>
+                            <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                            <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
+                                imagen</label>
+                        </div>
+                    </div>
+                    <div class="row g-3">
+                        <div class="col-sm-12 col-md-6">
+                            <label for="nombreAdministrador" class="form-label">Nombre</label>
+                            <input id="nombreAdministrador" type="text" name="nombreAdmin" class="form-control"
+                                required>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <label for="apellidoAdministrador" class="form-label">Apellido</label>
+                            <input id="apellidoAdministrador" type="text" name="apellidoAdmin" class="form-control"
+                                required>
+                        </div>
+                        <div class="col-sm-12 col-md-12">
+                            <label for="correoAdministrador" class="form-label">Correo</label>
+                            <input id="correoAdministrador" type="email" name="correoAdmin" class="form-control"
+                                required>
+                        </div>
+                        <div class="col-sm-12 col-md-12">
+                            <label for="aliasAdministrador" class="form-label">Alias</label>
+                            <input id="aliasAdministrador" type="text" name="aliasAdmin" class="form-control" required>
+                        </div>
+                        <div class="col-sm-12 col-md-12">
+                            <label for="claveAdministrador" class="form-label">Contraseña</label>
+                            <input id="claveAdministrador" type="password" name="claveAdmin" class="form-control"
+                                required>
+                        </div>
+                        <div class="col-sm-12 col-md-12">
+                            <label for="confirmarClave" class="form-label">Confirmar contraseña</label>
+                            <input id="confirmarClave" type="password" name="confirmarClave" class="form-control" required>
+                        </div>
+                        <input id="fechaRegistro" type="date" name="fechaRegistroAdmin" class="form-control" hidden>
+                        <div class="text-center">
+                            <button type="reset" class="btn btn-red-color text-light p-2 rounded-3">Cancelar</button>
+                            <button type="submit" class="btn btn-orange-color text-light p-2 rounded-3 ">Guardar</button>
+                        </div>
                     </div>
                 </form>
             </div>
