--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -30,14 +30,14 @@
                     </div>
                     <div class="col-sm-12 col-md-10 align-self-center">
                         <div class="row">
-                            <h1 class="fw-bold text-light">¡Buenas tardes María!</h1>
+                            <h1 class="fw-bold text-light" id="greetings">¡Buenas tardes María!</h1>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 col-md-4">
+                            <div class="col-sm-12 col-md-5">
                                 <!-- Input para buscador -->
                                 <form class="d-flex" id="searchDashboard" name="search_dashboard">
                                     <input class="form-control me-2 bg-white" role="search" type="search"
-                                        aria-label="Search" id="search_input" name="searchInput">
+                                        aria-label="Search" id="search_input" name="searchInput" placeholder="Escribe el nombre de algún producto o usuario">
                                     <button class="btn btn-orange-color text-light" type="submit"
                                         id="btn_buscador_dashboard" name="btnBuscadorDashboard">Buscar</button>
                                 </form>
@@ -90,17 +90,17 @@
                     <div class="col">
                         <div class="row p-4 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
-                                <img class="picture rounded-circle" src="../../resources/img/png/picture.png">
+                                <img class="picture rounded-circle" src="../../resources/img/png/picture.png" id="adminImg">
                             </div>
                             <div class="d-flex justify-content-center align-items-center mt-3">
                                 <a href="../../views/admin/settings.html"
                                     class="btn btn-red-color text-light p-2 rounded-5">Ver mi perfil</a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
-                                <p class="fw-semibold fs-5 mt-3 mb-1">María Eugenia Castro</p>
+                                <p class="fw-semibold fs-5 mt-3 mb-1" id="adminName"></p>
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
-                                <p class="">mariaEugenia@gmail.com</p>
+                                <p id="emailAdmin"></p>
                             </div>
                         </div>
                     </div>
