--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -30,14 +30,15 @@
                     </div>
                     <div class="col-sm-12 col-md-10 align-self-center">
                         <div class="row">
-                            <h1 class="fw-bold text-light" id="greetings">¡Buenas tardes María!</h1>
+                            <h1 class="fw-bold text-light" id="greetings"></h1>
                         </div>
                         <div class="row">
                             <div class="col-sm-12 col-md-5">
                                 <!-- Input para buscador -->
                                 <form class="d-flex" id="searchDashboard" name="search_dashboard">
                                     <input class="form-control me-2 bg-white" role="search" type="search"
-                                        aria-label="Search" id="search_input" name="searchInput" placeholder="Escribe el nombre de algún producto o usuario">
+                                        aria-label="Search" id="search_input" name="searchInput"
+                                        placeholder="Escribe el nombre de algún producto o usuario">
                                     <button class="btn btn-orange-color text-light" type="submit"
                                         id="btn_buscador_dashboard" name="btnBuscadorDashboard">Buscar</button>
                                 </form>
@@ -90,7 +91,8 @@
                     <div class="col">
                         <div class="row p-4 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
-                                <img class="picture rounded-circle" src="../../resources/img/png/picture.png" id="adminImg">
+                                <img class="picture rounded-circle" src="../../resources/img/png/picture.png"
+                                    id="adminImg">
                             </div>
                             <div class="d-flex justify-content-center align-items-center mt-3">
                                 <a href="../../views/admin/settings.html"
@@ -149,6 +151,7 @@
                 </div>
             </div>
             <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
+        </div>
     </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
